<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.roga.santander_dev_week.ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/redPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        tools:ignore="MissingConstraints"/>


    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/tv_texto_ola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_ola"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/text_cliente"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@id/tv_texto_ola"
        android:layout_marginLeft="4dp" />


    <TextView
        android:id="@+id/tv_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/text_agencia"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_cliente"
        app:layout_constraintStart_toStartOf="@id/tv_texto_ola"/>

    <TextView
        android:id="@+id/tv_numero_agencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/text_numero_agencia"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/tv_cliente"
        app:layout_constraintStart_toEndOf="@+id/tv_agencia"/>

    <TextView
        android:id="@+id/tv_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="90dp"
        android:text="@string/text_conta_corrente"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cliente"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/tv_numero_conta_corrente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/text_numero_conta_corrente"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_cliente"
        app:layout_constraintStart_toEndOf="@+id/tv_conta_corrente"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_card_conta"
        android:layout_height="220dp"
        android:layout_width="0dp"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agencia">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_launcher_sifrao"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_launcher_expand_black"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_saldo_disponivel"
                app:layout_constraintBottom_toBottomOf="@id/tv_saldo_disponivel" />


            <TextView
                android:id="@+id/tv_saldo_disponivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/text_saldo_disponivel"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_saldo"
                app:layout_constraintLeft_toRightOf="@+id/iv_saldo"
                app:layout_constraintTop_toTopOf="@+id/iv_saldo"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_sifrao_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/text_sifrao_saldo"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@id/iv_saldo"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_disponivel"/>

            <TextView
                android:id="@+id/tv_valor_saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/text_valor_saldo"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_saldo_disponivel"
                app:layout_constraintStart_toEndOf="@+id/tv_sifrao_saldo"/>


            <TextView
                android:id="@+id/tv_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_saldo_limite"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@+id/tv_sifrao_saldo"
                app:layout_constraintTop_toBottomOf="@id/tv_sifrao_saldo" />

            <TextView
                android:id="@+id/tv_sifrao_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/text_sifrao_saldo_limite"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_saldo_limite"
                app:layout_constraintTop_toBottomOf="@id/tv_sifrao_saldo" />


            <TextView
                android:id="@+id/tv_valor_saldo_limite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/text_valor_saldo_limite"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/tv_sifrao_saldo_limite"
                app:layout_constraintTop_toBottomOf="@id/tv_sifrao_saldo" />

            <View
                android:id="@+id/v_linha"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@+id/tv_saldo_limite"/>

            <TextView
                android:id="@+id/tv_ver_extrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ver_extrato"
                android:layout_margin="16dp"
                android:textColor="@color/redSecundary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/v_linha"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_pagar"
        app:layout_constraintTop_toBottomOf="@id/cv_card_conta"

        app:layout_constraintLeft_toLeftOf="@id/cv_card_conta"
        android:layout_marginTop="32dp"
        android:layout_height="100dp"
        android:layout_width="100dp">

        <TextView
            android:id="@+id/tv_pagar"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="54dp"
            android:textAlignment="center"
            android:text="@string/text_pagar"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_pagar"/>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_transferir"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/cv_recarga"
        app:layout_constraintStart_toEndOf="@+id/cv_pagar"
        app:layout_constraintTop_toBottomOf="@id/cv_card_conta">
        <TextView
            android:id="@+id/tv_transferir"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="54dp"
            android:textAlignment="center"
            android:text="@string/text_transferir"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_transferencia"
            android:layout_marginTop="8dp"/>




    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_recarga"
        app:layout_constraintTop_toBottomOf="@id/cv_card_conta"
        app:layout_constraintRight_toRightOf="@id/cv_card_conta"
        android:layout_marginTop="32dp"
        android:layout_height="100dp"
        android:layout_width="100dp">
        <TextView
            android:id="@+id/tv_recarga"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="54dp"
            android:textAlignment="center"
            android:text="@string/text_recarga"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_recarregar"
            android:layout_marginTop="12dp"/>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/iv_cartao_final"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_pagar"
        android:layout_marginTop="48dp"
        android:background="@color/redPrimary"/>

    <ImageView
        android:id="@+id/iv_up_carta_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:src="@drawable/ic_launcher_expand__white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_cartao_final"
        app:layout_constraintTop_toTopOf="@id/iv_cartao_final"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"/>

    <TextView
        android:id="@+id/tv_cartao_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cartao_final"
        android:textColor="@color/white"
        android:layout_marginTop="72dp"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/cv_pagar"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_pagar"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/tv_numero_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/text_numero_cartao"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tv_cartao_final"
        app:layout_constraintTop_toBottomOf="@id/cv_pagar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
